--- a/web.config
+++ b/web.config
@@ -8,6 +8,15 @@
     \Windows\Microsoft.Net\Framework\v2.x\Config 
 -->
 <configuration>
+<runtime>
+   
+    <!-- Added this entry to fix the issue -->
+    <dependentAssembly>
+      <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+      <bindingRedirect oldVersion="0.0.0.0-4.0.0.1" newVersion="4.0.0.0" />
+    </dependentAssembly>
+   
+  </runtime>
   <!--<configSections>
     <sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
       <sectionGroup name="scripting" type="System.Web.Configuration.ScriptingSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
